# smjpeg

./: CHANGES  Makefile  README  SMJPEG.txt  aclocal.m4  configure  configure.in  play_smjpeg.c  smjpeg_decode.c  smjpeg_decode.h  smjpeg_encode.c
adpcm/: adpcm.c
branches/loki/: smjpeg_encode.c  smjpeg_file.h
branches/loki/jpeg-6b/: jdcolor.c
jpeg-6b/: Makefile  Makefile.in  jdmaster.c  jdmerge.c  jpeglib.h
tags/release_0_2_1/: CHANGES  README  configure.in  play_smjpeg.c  smjpeg_decode.h  smjpeg_encode.c
tags/release_0_2_1/adpcm/: Makefile.am
tags/smjpeg_0_1_1/: CHANGES  README  smjpeg_decode.h
tags/smjpeg_0_1_1/jpeg-6b/: jdmaster.c
tags/smjpeg_0_1_2/: TODO  play_smjpeg.c  smjpeg_decode.c
tags/smjpeg_0_1_2/adpcm/: Makefile
tags/smjpeg_0_1_2/jpeg-6b/: jdmerge.c
trunk/: CHANGES  Makefile  Makefile.am  Makefile.in  Patches  README  configure  configure.in  play_smjpeg.c  smjpeg.spec.in  smjpeg_decode.c  smjpeg_decode.h
trunk/adpcm/: Makefile.in  adpcm.h
trunk/jpeg-6b/: Makefile  Makefile.am  jdmaster.c  jdmerge.c  jpeglib.h
