
noinst_LTLIBRARIES = libjpeg.la

libjpeg_la_SOURCES =		\
	jcapimin.c		\
	jcapistd.c		\
	jctrans.c		\
	jcparam.c		\
	jdatadst.c		\
	jcinit.c		\
	jcmaster.c		\
	jcmarker.c		\
	jcmainct.c		\
	jcprepct.c		\
	jccoefct.c		\
	jccolor.c		\
	jcsample.c		\
	jchuff.c		\
	jcphuff.c		\
	jcdctmgr.c		\
	jfdctfst.c		\
	jfdctflt.c		\
	jfdctint.c		\
	jdapimin.c		\
	jdapistd.c		\
	jdtrans.c		\
	jdatasrc.c		\
	jdmaster.c		\
	jdinput.c		\
	jdmarker.c		\
	jdhuff.c		\
	jdphuff.c		\
	jdmainct.c		\
	jdcoefct.c		\
	jdpostct.c		\
	jddctmgr.c		\
	jidctfst.c		\
	jidctflt.c		\
	jidctint.c		\
	jidctred.c		\
	jdsample.c		\
	jdcolor.c		\
	jquant1.c		\
	jquant2.c		\
	jdmerge.c		\
	jcomapi.c		\
	jutils.c		\
	jerror.c		\
	jmemmgr.c		\
	jmemnobs.c		\
	jchuff.h		\
	jconfig.h		\
	jdct.h			\
	jdhuff.h		\
	jerror.h		\
	jinclude.h		\
	jmemsys.h		\
	jmorecfg.h		\
	jpegint.h		\
	jpeglib.h		\
	jversion.h

EXTRA_DIST =			\
	libjpeg.doc
